--- a/_locales/pt_BR/messages.json
+++ b/_locales/pt_BR/messages.json
@@ -1,4 +1,7 @@
 {
+  "accept_terms": {
+    "message": "Accept terms"
+  },
   "account_creation_privacy_statement": {
     "message": "Nossos $LINK_TERMS_START$Termos e Condições Gerais$LINK_TERMS_END$ e nosso $LINK_UA_START$Contrato de Licença$LINK_UA_END$ se aplicam. Você encontrará nossa Declaração de Privacidade $LINK_PS_START$aqui$LINK_PS_END$.",
     "placeholders": {
@@ -27,6 +30,9 @@
   },
   "ad_blocking_DESC": {
     "message": "Bloqueie anúncios nas páginas que você visita."
+  },
+  "additional_permissions_required": {
+    "message": "Additional Permissions Required"
   },
   "ads": {
     "message": "anúncios"
@@ -78,6 +84,12 @@
   "alert_smart_block_on": {
     "message": "Navegação inteligente ATIVADA. O bloqueio de rastreador será ajustado para otimizar o desempenho da página."
   },
+  "all_popups": {
+    "message": "All Popups"
+  },
+  "all_set__go_with_ghosty_": {
+    "message": "All set! go with ghosty!"
+  },
   "already_subscribed": {
     "message": "Já assinei"
   },
@@ -126,8 +138,14 @@
   "anti_tracking_DESC": {
     "message": "Anonimizar rastreadores desbloqueados e desconhecidos para uma maior proteção na navegação."
   },
+  "any_questions__anytime_": {
+    "message": "Any questions? Anytime!"
+  },
   "are_you_sure_": {
     "message": "Are you sure?"
+  },
+  "are_you_sure_you_want_to_skip_enabling_ghostery_": {
+    "message": "Are you sure you want to skip enabling Ghostery?"
   },
   "audio_video_player": {
     "message": "Reprodutor de Áudio/Vídeo",
@@ -156,6 +174,9 @@
   },
   "block_toggle_tracking": {
     "message": "Bloquear rastreadores"
+  },
+  "blocked": {
+    "message": "Bloqueados"
   },
   "blocked_redirect_action_always_title": {
     "description": "Title for the 'Allow always and reload' button on the blocked redirect page.",
@@ -522,6 +543,9 @@
     "message": "CDN",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
+  "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto_support@ghostery_com__support@ghostery_com__a___we_ll_be_more_than_happy_to_talk_to_you_": {
+    "message": "Check out <a href=\"$${0}\" target=\"_blank\">FAQs</a> or drop us a line at <a href=\"mailto:support@ghostery.com\">support@ghostery.com</a>. We'll be more than happy to talk to you!"
+  },
   "choose_your_default_search": {
     "message": "Escolha sua busca padrão"
   },
@@ -607,6 +631,9 @@
   "confirm_password_colon": {
     "message": "Confirmar senha:"
   },
+  "continue": {
+    "message": "Continue"
+  },
   "cookie": {
     "message": "cookie"
   },
@@ -668,6 +695,12 @@
   "email_colon": {
     "message": "Email:"
   },
+  "enable_ghostery": {
+    "message": "Enable Ghostery"
+  },
+  "enable_ghostery_to_get_started": {
+    "message": "Enable Ghostery to get started"
+  },
   "enable_when_blacklisted": {
     "message": "Para usar esta função, desfaça Restringir Site."
   },
@@ -712,6 +745,9 @@
   "first_name_field_label": {
     "message": "Primeiro nome (opcional):"
   },
+  "for_more_information_read_our_full": {
+    "message": "For more information read our full"
+  },
   "forgot_password": {
     "message": "Esqueceu a senha?"
   },
@@ -730,8 +766,23 @@
   "ghostery_basic": {
     "message": "Básico"
   },
+  "ghostery_disabled": {
+    "message": "Ghostery disabled"
+  },
+  "ghostery_enabled": {
+    "message": "Ghostery enabled"
+  },
   "ghostery_is_ready": {
     "message": "Ghostery está pronto!"
+  },
+  "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
+    "message": "Ghostery is set up to stop trackers in their tracks and protect your privacy while browsing!"
+  },
+  "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_for_their_own_profit_": {
+    "message": "Ghostery is stopping trackers in their tracks and preventing you from being profiled and your personal information sold to data brokers for their own profit."
+  },
+  "ghostery_privacy_policy": {
+    "message": "Ghostery Privacy Policy"
   },
   "global_settings_saved": {
     "message": "Configurações Globais Salvas"
@@ -755,11 +806,17 @@
     "message": "Hospedando",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
+  "i_agree_to_send_non_personal_information_to__a_href__@_0___whotracks_me__a__and_i_accept_the_ghostery__a_href____1___privacy_policy__a_": {
+    "message": "I agree to send non-personal information to <a href=\"$${0}\">WhoTracks.Me</a> and I accept the Ghostery <a href=\"$${1}\">Privacy Policy</a>"
+  },
   "invalid_email_forgot": {
     "message": "Desculpe, você precisa informar um endereço de email válido."
   },
   "invalid_email_login": {
     "message": "Desculpe, você precisa informar um endereço de email válido."
+  },
+  "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_tracker_information_to_whotracks_me__the_tracker_input_enables_ghostery_to_provide_real_time_intel_on_trackers_and_protection_to_the_entire_ghostery_user_community_": {
+    "message": "It exists thanks to micro-contributions of every Ghostery user who chooses to send tracker information to whotracks.me. The tracker input enables Ghostery to provide real-time intel on trackers and protection to the entire Ghostery user community."
   },
   "last_name_field_label": {
     "message": "Sobrenome (opcional):"
@@ -806,6 +863,9 @@
   "miscellaneous": {
     "message": "Miscelânea",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
+  },
+  "more_information_on_@_0__": {
+    "message": "More information on $${0}."
   },
   "name": {
     "description": "The title of this extension (Ghostery).",
@@ -1206,6 +1266,9 @@
   "priority_support": {
     "message": "Suporte prioritário"
   },
+  "privacy_policy": {
+    "message": "privacy policy"
+  },
   "privacy_protection": {
     "message": "Proteção de privacidade neste site"
   },
@@ -1356,9 +1419,6 @@
   },
   "settings_highlight_trackers_tooltip": {
     "message": "Às vezes, funcionalidades como compartilhamento em mídias sociais, comentários ou reprodutores de vídeo não funcionarão quando um certo rastreador estiver bloqueado. Se você desejar habilitar uma dessas funcionalidades bloqueadas, clique neste ícone na página:"
-  },
-  "settings_human_web_tooltip": {
-    "message": "O Ghostery agora implementa a Human Web por padrão, uma tecnologia revolucionária que usa a sabedoria da multidão para construir uma Internet mais privada."
   },
   "settings_import_dialog_error": {
     "message": "Ghostery não pode exibir o diálogo de navegação quando a página atual for uma das páginas reservadas do navegador. Vá a uma página diferente e tente novamente."
@@ -1535,6 +1595,9 @@
   "site_analytics": {
     "message": "Analítica do site",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
+  },
+  "skip": {
+    "message": "Pular"
   },
   "smart_blocking": {
     "message": "Navegação inteligente"
@@ -1713,6 +1776,9 @@
   "system_wide_tracker_and_ad_blocking": {
     "message": "Rastreio de todo o sistema e bloqueio de anúncios"
   },
+  "the_ghostery_browser_extension_is_installed_in_your_browser_but_ghosty_is_taking_a_light_nap_": {
+    "message": "The Ghostery Browser Extension is installed in your browser but Ghosty is taking a light nap."
+  },
   "too_many_failed_logins_text": {
     "message": "Muitas falhas ao efetuar login. Tente novamente em uma hora."
   },
@@ -1761,6 +1827,9 @@
   "tracker_details": {
     "message": "Detalhes do rastreador"
   },
+  "trackers": {
+    "message": "Rastreadores"
+  },
   "trackers_blocked": {
     "message": "Rastreadores bloqueados:"
   },
@@ -1774,7 +1843,6 @@
     "message": "Experimente o Ghostery Midnight"
   },
   "unblocked": {
-    "description": "Select this to show only unblocked (unchecked) tags in the tag browser. Should read as 'Show unblocked'.",
     "message": "bloqueada"
   },
   "unidentified": {
@@ -1787,6 +1855,12 @@
     "message": "Desconhecido",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
+  "welcome_to": {
+    "message": "Welcome to"
+  },
+  "what_is_whotracks_me_": {
+    "message": "What is whotracks.me?"
+  },
   "white_black_list_error_invalid_url": {
     "message": "Digite um email ou caractere curinga válidos."
   },
@@ -1796,6 +1870,21 @@
   "whitelist_error_duplicate_url": {
     "description": "Options page site trust error message shown when trusting a URL that is already in the trusted sites list.",
     "message": "Este site já é confiável."
+  },
+  "whotracks_me__operated_by_ghostery__is_the_most_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
+    "message": "WhoTracks.me, operated by Ghostery, is the most comprehensive global resource on trackers, bringing transparency to web tracking."
+  },
+  "with_ghostery_enabled_you_instantly_browser_the_web_safer__faster_and_with_less_annoying_ads_": {
+    "message": "With Ghostery enabled you instantly browser the web safer, faster and with less annoying ads."
+  },
+  "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_settings_": {
+    "message": "You can change your mind anytime and enable Ghostery to start tracking the trackers for you in Ghostery settings."
+  },
+  "you_chose_to_skip_enabling_ghostery_": {
+    "message": "You chose to skip enabling Ghostery!"
+  },
+  "you_re_all_set__ghosterian_": {
+    "message": "You're all set, Ghosterian!"
   },
   "your_email_do_not_match": {
     "message": "Seus emails não conferem."
