--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -1,4 +1,7 @@
 {
+  "accept_terms": {
+    "message": "Accept terms"
+  },
   "account_creation_privacy_statement": {
     "message": "我們的$LINK_TERMS_START$條款與條件$LINK_TERMS_END$ 和我們的 $LINK_UA_START$許可協議$LINK_UA_END$ 適用。您可以找到我們的隱私聲明$LINK_PS_START$here$LINK_PS_END$。",
     "placeholders": {
@@ -27,6 +30,9 @@
   },
   "ad_blocking_DESC": {
     "message": "阻止您登訪頁面的廣告。"
+  },
+  "additional_permissions_required": {
+    "message": "Additional Permissions Required"
   },
   "ads": {
     "message": "廣告"
@@ -78,6 +84,12 @@
   "alert_smart_block_on": {
     "message": "啟用智能瀏覽功能。將調整追蹤器封鎖功能以最佳化頁面性能。"
   },
+  "all_popups": {
+    "message": "All Popups"
+  },
+  "all_set__go_with_ghosty_": {
+    "message": "All set! go with ghosty!"
+  },
   "already_subscribed": {
     "message": "已訂閱"
   },
@@ -126,8 +138,14 @@
   "anti_tracking_DESC": {
     "message": "隱暱已解封及不明網頁跟蹤器的名稱，以加強網頁瀏覽保護。"
   },
+  "any_questions__anytime_": {
+    "message": "Any questions? Anytime!"
+  },
   "are_you_sure_": {
     "message": "Are you sure?"
+  },
+  "are_you_sure_you_want_to_skip_enabling_ghostery_": {
+    "message": "Are you sure you want to skip enabling Ghostery?"
   },
   "audio_video_player": {
     "message": "音訊/視訊播放器",
@@ -156,6 +174,9 @@
   },
   "block_toggle_tracking": {
     "message": "塊跟踪器"
+  },
+  "blocked": {
+    "message": "已封鎖"
   },
   "blocked_redirect_action_always_title": {
     "description": "Title for the 'Allow always and reload' button on the blocked redirect page.",
@@ -522,6 +543,9 @@
     "message": "CDN",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
+  "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto_support@ghostery_com__support@ghostery_com__a___we_ll_be_more_than_happy_to_talk_to_you_": {
+    "message": "Check out <a href=\"$${0}\" target=\"_blank\">FAQs</a> or drop us a line at <a href=\"mailto:support@ghostery.com\">support@ghostery.com</a>. We'll be more than happy to talk to you!"
+  },
   "choose_your_default_search": {
     "message": "選擇預設搜尋"
   },
@@ -607,6 +631,9 @@
   "confirm_password_colon": {
     "message": "確認密碼："
   },
+  "continue": {
+    "message": "Continue"
+  },
   "cookie": {
     "message": "cookie"
   },
@@ -668,6 +695,12 @@
   "email_colon": {
     "message": "電郵："
   },
+  "enable_ghostery": {
+    "message": "Enable Ghostery"
+  },
+  "enable_ghostery_to_get_started": {
+    "message": "Enable Ghostery to get started"
+  },
   "enable_when_blacklisted": {
     "message": "欲使用此功能，請取消限制網站。"
   },
@@ -712,6 +745,9 @@
   "first_name_field_label": {
     "message": "名 (非必填項):"
   },
+  "for_more_information_read_our_full": {
+    "message": "For more information read our full"
+  },
   "forgot_password": {
     "message": "忘記了密碼？"
   },
@@ -730,8 +766,23 @@
   "ghostery_basic": {
     "message": "Basic"
   },
+  "ghostery_disabled": {
+    "message": "Ghostery disabled"
+  },
+  "ghostery_enabled": {
+    "message": "Ghostery enabled"
+  },
   "ghostery_is_ready": {
     "message": "Ghostery 已準備好了！"
+  },
+  "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
+    "message": "Ghostery is set up to stop trackers in their tracks and protect your privacy while browsing!"
+  },
+  "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_for_their_own_profit_": {
+    "message": "Ghostery is stopping trackers in their tracks and preventing you from being profiled and your personal information sold to data brokers for their own profit."
+  },
+  "ghostery_privacy_policy": {
+    "message": "Ghostery Privacy Policy"
   },
   "global_settings_saved": {
     "message": "全球設定已儲存"
@@ -755,11 +806,17 @@
     "message": "託管",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
+  "i_agree_to_send_non_personal_information_to__a_href__@_0___whotracks_me__a__and_i_accept_the_ghostery__a_href____1___privacy_policy__a_": {
+    "message": "I agree to send non-personal information to <a href=\"$${0}\">WhoTracks.Me</a> and I accept the Ghostery <a href=\"$${1}\">Privacy Policy</a>"
+  },
   "invalid_email_forgot": {
     "message": "很抱歉，您必須輸入一個真實的電郵址。"
   },
   "invalid_email_login": {
     "message": "很抱歉，您必須輸入一個真實的電郵址。"
+  },
+  "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_tracker_information_to_whotracks_me__the_tracker_input_enables_ghostery_to_provide_real_time_intel_on_trackers_and_protection_to_the_entire_ghostery_user_community_": {
+    "message": "It exists thanks to micro-contributions of every Ghostery user who chooses to send tracker information to whotracks.me. The tracker input enables Ghostery to provide real-time intel on trackers and protection to the entire Ghostery user community."
   },
   "last_name_field_label": {
     "message": "姓 (非必填項):"
@@ -806,6 +863,9 @@
   "miscellaneous": {
     "message": "各種各樣的",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
+  },
+  "more_information_on_@_0__": {
+    "message": "More information on $${0}."
   },
   "name": {
     "description": "The title of this extension (Ghostery).",
@@ -1206,6 +1266,9 @@
   "priority_support": {
     "message": "優先支援"
   },
+  "privacy_policy": {
+    "message": "privacy policy"
+  },
   "privacy_protection": {
     "message": "本網站的隱私保護"
   },
@@ -1356,9 +1419,6 @@
   },
   "settings_highlight_trackers_tooltip": {
     "message": "有時當某個網頁跟蹤器被封鎖之後，像社交媒體分享、評論或視訊播放器之類的功能將不能使用。如果您想啟動這些被封鎖的功能之一，請點擊網頁上的這個圖標："
-  },
-  "settings_human_web_tooltip": {
-    "message": "Ghostery 現在默認地創設人文網 (Human Web)，那是一種採用群體智慧去建造一個更能保護隠私的互聯網的革命性科技。"
   },
   "settings_import_dialog_error": {
     "message": "當前的網頁是瀏覽器所保留的網頁之一，Ghostery不能顯示瀏覽器對話框。請瀏覽其他網頁並再次嘗試。"
@@ -1535,6 +1595,9 @@
   "site_analytics": {
     "message": "網站分析",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
+  },
+  "skip": {
+    "message": "跳過"
   },
   "smart_blocking": {
     "message": "智能瀏覽"
@@ -1713,6 +1776,9 @@
   "system_wide_tracker_and_ad_blocking": {
     "message": "全系統跟蹤器和廣告封鎖"
   },
+  "the_ghostery_browser_extension_is_installed_in_your_browser_but_ghosty_is_taking_a_light_nap_": {
+    "message": "The Ghostery Browser Extension is installed in your browser but Ghosty is taking a light nap."
+  },
   "too_many_failed_logins_text": {
     "message": "登入失敗次數過多，請一小時後重試。"
   },
@@ -1761,6 +1827,9 @@
   "tracker_details": {
     "message": "跟踪器詳細信息"
   },
+  "trackers": {
+    "message": "網頁跟蹤器"
+  },
   "trackers_blocked": {
     "message": "跟蹤器被封鎖："
   },
@@ -1774,7 +1843,6 @@
     "message": "試用 Ghostery Midnight"
   },
   "unblocked": {
-    "description": "Select this to show only unblocked (unchecked) tags in the tag browser. Should read as 'Show unblocked'.",
     "message": "已解除封鎖"
   },
   "unidentified": {
@@ -1787,6 +1855,12 @@
     "message": "不明的",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
+  "welcome_to": {
+    "message": "Welcome to"
+  },
+  "what_is_whotracks_me_": {
+    "message": "What is whotracks.me?"
+  },
   "white_black_list_error_invalid_url": {
     "message": "請輸入一個有效的 URL 或萬用字元。"
   },
@@ -1796,6 +1870,21 @@
   "whitelist_error_duplicate_url": {
     "description": "Options page site trust error message shown when trusting a URL that is already in the trusted sites list.",
     "message": "此網站已受信任。"
+  },
+  "whotracks_me__operated_by_ghostery__is_the_most_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
+    "message": "WhoTracks.me, operated by Ghostery, is the most comprehensive global resource on trackers, bringing transparency to web tracking."
+  },
+  "with_ghostery_enabled_you_instantly_browser_the_web_safer__faster_and_with_less_annoying_ads_": {
+    "message": "With Ghostery enabled you instantly browser the web safer, faster and with less annoying ads."
+  },
+  "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_settings_": {
+    "message": "You can change your mind anytime and enable Ghostery to start tracking the trackers for you in Ghostery settings."
+  },
+  "you_chose_to_skip_enabling_ghostery_": {
+    "message": "You chose to skip enabling Ghostery!"
+  },
+  "you_re_all_set__ghosterian_": {
+    "message": "You're all set, Ghosterian!"
   },
   "your_email_do_not_match": {
     "message": "您的這些電郵不脗合。"
