--- a/extension-manifest-v3/src/_locales/en/messages.json
+++ b/extension-manifest-v3/src/_locales/en/messages.json
@@ -9,7 +9,7 @@
   "additional_permissions_required": {
     "message": "Additional Permissions Required"
   },
-  "ads": {
+  "ads___onboarding": {
     "message": "Ads"
   },
   "adult_advertising": {
